Adding variables in application and fixing error handling