@@ -1,9 +1,15 @@
 package co.com.assessment.tokenresolver;
 
+import co.com.assessment.model.tournament.exception.SecurityErrorMessage;
+import co.com.assessment.model.tournament.exception.SecurityException;
+import co.com.assessment.model.tournament.exception.TechnicalErrorMessage;
+import co.com.assessment.model.tournament.exception.TechnicalException;
 import com.nimbusds.jose.JOSEException;
 import com.nimbusds.jose.jwk.source.JWKSource;
 import com.nimbusds.jose.jwk.source.JWKSourceBuilder;
 import com.nimbusds.jose.proc.SecurityContext;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.net.MalformedURLException;
@@ -16,21 +22,32 @@ import com.nimbusds.jose.proc.BadJOSEException;
 import com.nimbusds.jose.proc.JWSKeySelector;
 import com.nimbusds.jose.proc.JWSVerificationKeySelector;
 import com.nimbusds.jwt.proc.DefaultJWTClaimsVerifier;
-
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.ParseException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 @Component
 public class JwtResolver {
-    private static final String ISSUER = "";
-    private static final String JWKS_URL = "";
+    private static final Logger log = LoggerFactory.getLogger(JwtResolver.class);
+    private final String issuer;
+
+    private final String jwksUrlString;
 
     private final JWTProcessor<SecurityContext> jwtProcessor;
 
-    public JwtResolver() throws MalformedURLException {
+    public JwtResolver(
+            @Value("${aws.cognito.issuer}") String issuer,
+            @Value("${aws.cognito.jwksUrl}") String jwksUrlString
+    ) throws MalformedURLException, URISyntaxException {
+        this.issuer = issuer;
+        this.jwksUrlString = jwksUrlString;
+
         ConfigurableJWTProcessor<com.nimbusds.jose.proc.SecurityContext> processor =
                 new DefaultJWTProcessor<>();
 
-        URL jwksUrl = new URL(JWKS_URL);
+        URL jwksUrl = new URI(jwksUrlString).toURL();
 
         JWKSource<SecurityContext> jwkSource = JWKSourceBuilder.create(jwksUrl)
                 .build();
@@ -40,7 +57,7 @@ public class JwtResolver {
         processor.setJWSKeySelector(keySelector);
 
         processor.setJWTClaimsSetVerifier(new DefaultJWTClaimsVerifier<>(
-                new JWTClaimsSet.Builder().issuer(ISSUER).build(),
+                new JWTClaimsSet.Builder().issuer(issuer).build(),
                 null
         ));
 
@@ -52,7 +69,7 @@ public class JwtResolver {
 
         Object subClaim = claims.getClaim("sub");
         if (subClaim == null) {
-            throw new JwtValidationException("JWT is valid but is missing the 'sub' claim.");
+            throw new SecurityException(SecurityErrorMessage.INVALID_CREDENTIALS);
         }
 
         return subClaim.toString();
@@ -64,32 +81,23 @@ public class JwtResolver {
 
     private JWTClaimsSet processToken(String token) {
         if (token == null || token.trim().isEmpty()) {
-            throw new JwtValidationException("Token must not be null or empty.");
+            throw new SecurityException(SecurityErrorMessage.INVALID_CREDENTIALS);
         }
 
         try {
             return jwtProcessor.process(token, null);
         } catch (ParseException e) {
-            // Thrown if the token structure is invalid
-            throw new JwtValidationException("Failed to parse JWT token structure.", e);
+            log.error("Failed to parse JWT token structure.", e);
+            throw new SecurityException(SecurityErrorMessage.INVALID_CREDENTIALS);
         } catch (BadJOSEException e) {
-            // Thrown if validation fails (e.g., bad signature, expired, wrong issuer)
-            throw new JwtValidationException("JWT validation failed: " + e.getMessage(), e);
+            log.error("JWT validation failed: " + e.getMessage(), e);
+            throw new SecurityException(SecurityErrorMessage.INVALID_CREDENTIALS);
         } catch (JOSEException e) {
-            // Thrown if key fetching fails
-            throw new JwtValidationException("JOSE error during JWT processing: " + e.getMessage(), e);
+            log.error("JOSE error during JWT processing: " + e.getMessage(), e);
+            throw new TechnicalException(TechnicalErrorMessage.TECHNICAL_ERROR);
         } catch (Exception e) {
-            // General catch for unexpected errors
-            throw new JwtValidationException("An unexpected error occurred during JWT processing: " + e.getMessage(), e);
+            log.error("An unexpected error occurred during JWT processing: " + e.getMessage(), e);
+            throw new TechnicalException(TechnicalErrorMessage.TECHNICAL_ERROR);
         }
     }
-
-    public static class JwtValidationException extends RuntimeException {
-        public JwtValidationException(String message) {
-            super(message);
-        }
-        public JwtValidationException(String message, Throwable cause) {
-            super(message, cause);
-        }
-}
 }
